--- a/react-app/tsconfig.json
+++ b/react-app/tsconfig.json
@@ -18,9 +18,17 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./src",
+    "paths": {
+      "@shared-core/*": ["../../shared-core/*"],
+    }
   },
   "include": [
-    "src"
+    "src",
+    "../shared-core/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
